--- a/main.css
+++ b/main.css
@@ -351,6 +351,44 @@ button.slick-arrow.slick-next{
 div.slick-slide{
     width: 220px;
 }
+.test-popup-link{
+    position: relative;
+    z-index: 10;
+}
+.slider-nav a.test-popup-link:hover div.vual{
+    position: absolute;
+    top: 0px;
+    left: 0;
+    width: 200px;
+    height: 115px;
+    background: rgba(0,0,0,0.8);
+    z-index: 50;
+}
+.slider-nav a.test-popup-link:hover div.vual::before{
+    content: "";
+    background: url('img/slider-mini-zoom.png');
+    position: absolute;
+    top: 25%;
+    left: 32%;
+    width: 74px;
+    height: 70px;
+    z-index: 55;   
+}
+
+.slider-nav a.test-popup-link:hover div.vual::after {
+    content: "";
+    background: url('img/slide-1-mini.png');
+    opacity: 0.5;
+    filter: blur(5px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 115px;
+    -webkit-filter: blur(15px);
+    -moz-filter: blur(5px);
+    z-index: 51;   
+}
 
 /*секция с формой*/
 
@@ -371,6 +409,76 @@ div.slick-slide{
     height: 490px;
     width: 555px;
     background: #fff;
+    box-sizing: border-box;
+    -overflow: hidden;
+}
+.contact-form-position fieldset{
+    display: flex;
+    flex-direction: column;
+
+}
+.contact-input__name-email{
+    height: 230px;
+    padding: 0 30px;
+
+}
+.contact-input__name-email input{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    border: none;
+    border-bottom: 1px solid #2d2d31;
+    padding: 20px 0 10px;
+    font-size: 16px;
+}
+.contact-input__name-email input:focus,
+.contact-input__textarea textarea:focus,
+.contact-input__textarea button:focus{
+    outline: none;
+}
+
+:focus::-webkit-input-placeholder,
+:focus::-moz-placeholder,
+:focus:-moz-placeholder,
+:focus:-ms-input-placeholder,
+{
+    color: transparent;
+}
+
+
+.contact-input__name-email h3{
+    font-size: 30px;
+    margin: 30px 0;
+    padding: 0;
+}
+
+.contact-input__textarea{
+    height: 260px;
+    background: #2d2d31;
+    padding: 30px 30px;
+    position: relative;
+    text-align: center;
+}
+.contact-input__textarea textarea{
+    height: 160px;
+    width: 496px;
+    background: #2d2d31;
+    color: #fff;
+    resize: none;
+    border: none;
+}
+.contact-input__textarea button{
+    width: 322px;
+    height: 60px;
+    background: #fff;
+    color: #2d2d31;
+    border-radius: 40px;
+    font-size: 22px;
+    text-transform: uppercase;
+    /*position: absolute;
+    bottom: -20px;
+    left: 0;
+    right: 0;*/
 }
 .contact-form .contacts-info{
     color: #fff;
